Refactoring: remove GlobList